package org.example.catalog;

public enum Priority {
    HIGH,
    MEDIUM,
    LOW
}
