package org.example.catalog;

public enum Status {
    PENDING,
    IN_PROGRESS,
    COMPLETED,
    CANCELED
}
