@startuml DiagramaClasesV2
title Diagrama de Clases v2 - Entregable 2\nPatron Strategy (notificaciones) + Concurrencia (synchronized + TaskWorker)

' ============================================
' ENUMS
' ============================================
enum Priority {
  HIGH
  MEDIUM
  LOW
}

enum Status {
  PENDING
  IN_PROGRESS
  COMPLETED
  CANCELED
}

' ============================================
' INTERFACES BASE
' ============================================
interface Authenticable {
  +authenticate(email: String, password: String): boolean
}

interface Shareable {
  +addCollaborator(user: User): void
  +showCollaborators(): void
  +isShared(): boolean
}

' ============================================
' PATRON STRATEGY - Canales de notificacion
' (UNICO patron de diseno del proyecto)
' ============================================
interface NotificationStrategy {
  +notify(message: String): void
}

class EmailNotification implements NotificationStrategy {
  +notify(message: String): void
}

class MensajeTextoNotification implements NotificationStrategy {
  +notify(message: String): void
}

' ============================================
' JERARQUIA USER
' ============================================
abstract class User implements Authenticable {
  -id: int
  -name: String
  -email: String
  -password: String
  -createdItems: List<Item> {synchronizedList}
  -sharedItems: List<Item> {synchronizedList}
  +authenticate(email: String, password: String): boolean
  +addItem(item: Item): boolean
  +shareItem(item: Item, user: User): boolean
  +printCreatedItems(): void
  +printSharedItems(): void
}

class PremiumUser extends User {
  +fullAccess(): boolean
}

class ClassicUser extends User {
  -limitTask: int
  -maxCollaborators: int
  +addItem(item: Item): boolean
  +shareItem(item: Item, user: User): boolean
}

' ============================================
' JERARQUIA ITEM - con concurrencia
' ============================================
abstract class Item implements Shareable {
  #id: int
  #title: String
  #description: String
  #priority: Priority
  #owner: User
  #collaborators: List<User> {CopyOnWriteArrayList}
  +{synchronized} addCollaborator(user: User): void
  +{synchronized} removeCollaborator(user: User): void
  +showCollaborators(): void
  +isShared(): boolean
  +{abstract} showDetails(): void
}

class Task extends Item {
  -status: Status
  +showDetails(): void
  +getStatus(): Status
  +{synchronized} modifyStatus(newStatus: Status): void
}

class Reminder extends Item {
  -dateTime: String
  -notificationStrategy: NotificationStrategy
  +showDetails(): void
  +getDateTime(): String
  +notifyAlert(): void
  +setNotificationStrategy(strategy: NotificationStrategy): void
}

' ============================================
' CONCURRENCIA - Hilo trabajador
' (NO es un patron de diseno GoF, es solo
'  un Runnable para simular acceso concurrente
'  a Tasks compartidas)
' ============================================
class TaskWorker implements Runnable {
  -task: Task
  -newStatus: Status
  -user: User
  +TaskWorker(task: Task, newStatus: Status, user: User)
  +run(): void
}

' ============================================
' RELACIONES
' ============================================
User "1" o-- "0..*" Item : posee >
Item "1" *-- "1" Priority
Task "1" *-- "1" Status
Reminder "1" o-- "1" NotificationStrategy : usa >
TaskWorker ..> Task : modifica\nconcurrentemente >
TaskWorker ..> User : representa >

' ============================================
' NOTAS
' ============================================
note right of NotificationStrategy
  PATRON STRATEGY
  Permite que un Reminder cambie en
  tiempo de ejecucion como notifica
  (Email o Mensaje de Texto) sin
  modificar la clase Reminder.
end note

note bottom of Item
  CONCURRENCIA
  - addCollaborator() es synchronized:
    evita race conditions cuando dos hilos
    intentan agregar colaboradores a la
    misma Task compartida.
  - collaborators usa CopyOnWriteArrayList
    para iterar sin bloqueos.
end note

note bottom of Task
  CONCURRENCIA
  modifyStatus() es synchronized.
  Cuando varios usuarios (varios
  TaskWorker en hilos distintos)
  intentan cambiar el estado a la
  vez, solo uno entra a la seccion
  critica; los demas esperan.
end note

note right of TaskWorker
  Implementa Runnable. Se lanza
  desde DemoRunner con
  new Thread(new TaskWorker(...))
  .start() para simular varios
  usuarios actuando en paralelo
  sobre la misma Task.
end note

@enduml
